Fixed conflict in backport